fix overflow cutoff

--- a/app/public/javascripts/src/react/components/plan/plan-settings.css
+++ b/app/public/javascripts/src/react/components/plan/plan-settings.css
@@ -71,7 +71,7 @@
   flex-grow: 1;
 }
 .collapse{
-  overflow: auto
+  overflow: visible;
 }
 
 .card-fixed{
